# discord-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CODE_CLEANUP.md  COMMIT_STEPS.md  DISCORD_MCP_SPEC.md  PUBLISHING.md  README.md  dev.py  discord_example_server.py  example-mcp-config.json  main.py  mcp_client.py  pyproject.toml  ref_guide.md  requirements.txt  test_anthropic.py
bot/: bot.py
cli/: __init__.py  chat.py  claude.py  cli.py  cli_chat.py  main.py  mcp_client.py  tools.py
core/: claude.py  cli_chat.py  tools.py
docs/: ARCHITECTURE.md  ATOMIC_TOOLS_ANALYSIS.md  CAMPAIGN_FLOW.md  DIAGNOSTICS_FLOW.md  DISCOVERY_FLOW.md  IMPLEMENTATION_GUIDE.md  MESSAGE_FLOW.md  RESOURCES_AND_PROMPTS.md
examples/: mcp-config-examples.json
mcp_server/: README_NLP.md  nlp_processor.py  server.py  server_registry_wrapper.py
mcp_server/tools/: bot_management.py  server_registry_tools.py
server_registry/: __init__.py  init.py
server_registry/db/: __init__.py  connection.py  init_db.py
server_registry/models/: __init__.py  context.py
server_registry/repositories/: __init__.py  channel_repository.py  context_repository.py  server_repository.py
server_registry/services/: context_manager_service.py
specs/: README.md  ROADMAP.md  design.md  requirements.md  server_registry.md  tasks.md
specs/archive/: README.md  channel_tools.md
specs/future/: context_tools.md  debug_tools.md  message_styling.md  thread_tools.md
specs/future/schema/: README.md  activity.sql  aliases.sql  channels.sql  logging.sql  members.sql  roles.sql  servers.sql  styles.sql
specs/implemented/: core_tools.md  database.md
specs/prompts/: prompt_tools.md
specs/schema/: activity.sql  aliases.sql  channels.sql  logging.sql  members.sql
specs/tools/: _future.md  infra_tools.md  member_tools.md  role_tools.md
src/discord_mcp/: __init__.py  __main__.py  config.py  nlp_processor.py  server.py  server_registry_wrapper.py
src/discord_mcp/database/: __init__.py  migrations.py  models.py  repositories.py
src/discord_mcp/discord_client/: __init__.py  bot.py
src/discord_mcp/prompts/: __init__.py
src/discord_mcp/tools/: __init__.py  (+7 more)
tests/: TASK_1_FINAL_VERIFICATION.py  debug_guilds.py  run_tests.py  test_campaign_tally_comprehensive.py  test_campaigns.py  test_cli_imports.py  test_complete_functionality.py  test_complete_real.py  test_core_tools.py  test_core_tools_live.py  test_core_tools_simple.py  test_mcp_tools_real.py  test_nlp.py  test_real_discord.py  test_registry.py  test_registry_fix.py  test_restructure.py  test_restructure_verification.py  test_simple_real.py  test_timing_issue.py
(+17 files in other folders)
